assets/css/style.css
/* ... */
/* Contact form */
#contact-section {
    background-color: #3a3a3a;
}

#contact-form {
    display: flex;
    flex-direction: column;
    border: solid #FA5 2px;
    margin: 10px;
    border-radius: 10px;
    padding: 10px;
    background-color: #3a3a3a;
    color: white;
    max-width: 400px;
}

#contact-form h2 {
    color: #fa5;
}

.text-input {
    margin: 5px;
    background: transparent;
    padding: 5px;
    border: 2px solid rgb(32,
            156,
            238);
    border-radius: 5px;
    color: white;
}

.contact-button {
    width: 80px;
    background-color: rgb(32,
            156,
            238);
    padding: 5px;
    border-radius: 10px;
}

.contact-button:hover {
    background-color: #FA5;
}

/* Styles for footer */
footer {
    display: flex;
    flex-direction: column;
    background-color: rgba(32, 156, 238, 0.6);
}

#business-hours {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
}

#business-hours>h3 {
    text-align: center;
    margin: 10px 0;
}

#business-hours-container {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    margin-bottom: 20px;
}

.business-hours-day {
    font-size: 16px;
}

.business-hours-time {
    margin-left: 20px;
}

#social-media {
    display: flex;
    padding: 20px 10px;
    align-items: center;
    justify-content: space-between;
    max-width: 100vw;
    margin: 10px;
}

#social-media a {
    font-size: 170%;
    color: #3a3a3a;
}

/* 768px and above(tablets etc) */
@media screen and (min-width:768px) {

    /* Header */
    nav {
        display: block;
        position: relative;
        top: 0;
        left: auto;
        height: 55px;
        padding-top: 5px;
        box-shadow: none;
        width: fit-content;
    }

    #navmenu {
        display: flex;

    }

    #navmenu li {
        padding-right: 30px;

    }

    /* Displays to user which page they are currently on */
    .current {
        border-left: solid 2px white;
        margin-left: 5px;
        margin-right: 0;
    }

    #navmenu ul {
        border: solid 1px #3a3a3a;
    }

    .navmenu-toggle-label {
        display: none;
    }

    #logo {
        font-size: 210%;
        padding: 5px;
    }

    /* Introduction */

    #intro-content {
        margin: 20% auto;
        border-radius: 20px;
        padding: 10px;
        font-size: 20px;
    }

    /* contact-intro */
    #contact-content {
        margin-left: 30px;
        font-size: 20px;
    }

    /* previous work intro */
    #previous-content h2 {
        font-size: 36px;
    }

    #previous-content p {
        font-size: 26px;
    }

    /* previous-work-gallery */

    #previous-work-gallery {
        flex-direction: row;
    }

    #previous-work-gallery img {
        width: 45%;
    }

    .small-picture {
        flex-grow: 1;
    }

    .big-picture {
        flex-grow: 2;
    }

    /* services */

    #services h2 {
        margin-bottom: 20px;
        background-color: #FA5;
    }

    #services-content {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }

    .care-package {
        max-width: 200px;
    }

    .price {
        align-items: center;
    }

    /* Gives user feedback when hovering the price buttons */
    .price:hover {
        color: white;
    }

    #working-video h2 {
        margin: 20px;
        border-radius: 20px;
    }

    #working-video div p {
        margin: 10px;
    }

    /* Contact section */
    #contact-alternative {
        flex-direction: row;
    }

    #contact-container {
        flex-direction: row;
    }

    /* Contact form */
    #contact-section {
        display: flex;
        width: 100%;
        background: url("../images/contact_section_background.jpg") no-repeat center center/cover;
        justify-content: center;
    }

    .text-input {
        max-width: 300px;
        margin: 10px 30px;
    }

    .contact-button {
        margin-left: 40%;
    }

    /* Footer */

    #footer-container {
        display: flex;
        flex-direction: row;
        align-items: center;
    }

    #footer-container>h3 {
        text-align: center;
    }

    #business-hours {
        display: flex;
        flex-grow: 1;
        font-size: 160%;
    }

    .business-hours-day {
        font-size: 20px;
    }

    .business-hours-time {
        font-size: 20px;
    }

    #business-location {
        margin-top: 10px;
        flex-grow: 2;
    }

    #social-media {
        max-width: 90%;
        padding-left: 5%;
        font-size: 140%;
    }

    /* Gives user feedback when hovering social media links */
    #social-media>a:hover {
        color: white;
    }
}
/* ... */

